# agent-backend

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: event_sink_filesystem.py  event_sink_minio.py  in_memory_session_store.py  llm_fake.py  llm_http.py  ref_extractor_llm.py  rescope_llm.py  slot_verifier_llm.py
backend/app/api/: answer_renderer.py  health.py  openai_compat.py  thinking_renderer.py
backend/app/config/: profiles.py  settings.py
backend/app/domain/: agents.py  classification.py  errors.py  finder.py  interaction.py  memory.py  prompting.py  query.py  retrieval.py  scenario.py  spec_driven.py  tools.py  verification.py
backend/app/observability/: logging.py  metrics.py  openinference.py  otel.py
backend/app/ports/: agent_runner.py  classifier.py  embedding.py  event_sink.py  llm.py  memory_store.py  prompt_source.py  ref_extractor.py  reranker.py  rescope.py  session_state_store.py  slot_verifier.py  tool.py  vector_store.py
backend/tests/integration/: conftest.py  test_anthropic_live.py  test_document_resolver_integration.py  test_retrieval_verify_slot.py  test_retriever_opensearch_integration.py  test_spec_driven_v2.py
backend/tests/unit/: _prompts_fixture.py  test_agentic_finder_v4.py  test_answer_renderer.py  test_answer_spec_intake.py  test_citation_format.py  test_claim_verification.py  test_classification_llm_hybrid.py  test_classification_prompt_source.py  test_classification_rule.py  (+72 more)
(+294 files in other folders)
