[project]
name = "agent-backend"
version = "0.1.0"
description = "SMR Agent experimentation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "boto3>=1.35",
  "asyncpg>=0.30",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]
phoenix = [
  "arize-phoenix-client>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: live external dependency (OpenSearch container, etc.). Opt-in via OPENSEARCH_TEST_ENDPOINT.",
  "anthropic_live: live Anthropic API call. Opt-in via ANTHROPIC_API_KEY.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
